@@ -34,7 +34,7 @@ enum LIBBDE_ERROR_DOMAINS
 {
 	LIBBDE_ERROR_DOMAIN_ARGUMENTS			= (int) 'a',
 	LIBBDE_ERROR_DOMAIN_CONVERSION			= (int) 'c',
-	LIBBDE_ERROR_DOMAIN_COMPRESSION		= (int) 'C',
+	LIBBDE_ERROR_DOMAIN_COMPRESSION			= (int) 'C',
 	LIBBDE_ERROR_DOMAIN_IO				= (int) 'I',
 	LIBBDE_ERROR_DOMAIN_INPUT			= (int) 'i',
 	LIBBDE_ERROR_DOMAIN_MEMORY			= (int) 'm',
@@ -80,11 +80,11 @@ enum LIBBDE_ARGUMENT_ERROR
 
 	/* The argument contains a value that is not supported
 	 */
-	LIBBDE_ARGUMENT_ERROR_UNSUPPORTED_VALUE	= 8,
+	LIBBDE_ARGUMENT_ERROR_UNSUPPORTED_VALUE		= 8,
 
 	/* The argument contains a value that conficts with another argument
 	 */
-	LIBBDE_ARGUMENT_ERROR_CONFLICTING_VALUE	= 9
+	LIBBDE_ARGUMENT_ERROR_CONFLICTING_VALUE		= 9
 };
 
 /* The conversion error codes
@@ -92,7 +92,7 @@ enum LIBBDE_ARGUMENT_ERROR
  */
 enum LIBBDE_CONVERSION_ERROR
 {
-	LIBBDE_CONVERSION_ERROR_GENERIC		= 0,
+	LIBBDE_CONVERSION_ERROR_GENERIC			= 0,
 
 	/* The conversion failed on the input
 	 */
@@ -124,7 +124,7 @@ enum LIBBDE_COMPRESSION_ERROR
  */
 enum LIBBDE_IO_ERROR
 {
-	LIBBDE_IO_ERROR_GENERIC			= 0,
+	LIBBDE_IO_ERROR_GENERIC				= 0,
 
 	/* The open failed
 	 */
@@ -172,7 +172,7 @@ enum LIBBDE_INPUT_ERROR
 
 	/* The input contains invalid data
 	 */
-	LIBBDE_INPUT_ERROR_INVALID_DATA		= 1,
+	LIBBDE_INPUT_ERROR_INVALID_DATA			= 1,
 
 	/* The input contains an unsupported signature
 	 */
@@ -201,7 +201,7 @@ enum LIBBDE_MEMORY_ERROR
 
 	/* The memory failed to be copied
 	 */
-	LIBBDE_MEMORY_ERROR_COPY_FAILED		= 2,
+	LIBBDE_MEMORY_ERROR_COPY_FAILED			= 2,
 
 	/* The memory failed to be set
 	 */
@@ -237,11 +237,11 @@ enum LIBBDE_RUNTIME_ERROR
 
 	/* The value could not be determined
 	 */
-	LIBBDE_RUNTIME_ERROR_GET_FAILED		= 6,
+	LIBBDE_RUNTIME_ERROR_GET_FAILED			= 6,
 
 	/* The value could not be set
 	 */
-	LIBBDE_RUNTIME_ERROR_SET_FAILED		= 7,
+	LIBBDE_RUNTIME_ERROR_SET_FAILED			= 7,
 
 	/* The value could not be appended/prepended
 	 */
