@@ -76,7 +76,7 @@ PyMethodDef pybde_module_methods[] = {
 	{ "open_file_object",
 	  (PyCFunction) pybde_volume_new_open_file_object,
 	  METH_VARARGS | METH_KEYWORDS,
-	  "open(file_object, mode='r') -> Object\n"
+	  "open_file_object(file_object, mode='r') -> Object\n"
 	  "\n"
 	  "Opens a volume using a file-like object." },
 
